--- a/index.html
+++ b/index.html
@@ -5,8 +5,32 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pips</title>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script src="./script.js"></script>
 </head>
 <body>
-  
+  <header>
+
+  </header>
+  <main>
+    <div>
+      <p>
+        1lot=
+        <select name="lot" id="lot">
+          <option value="1000">1000</option>
+          <option value="10000">10000</option>
+          <option value="100000">100000</option>
+        </select>
+      </p>
+      <p>
+        レバレッジ
+        <input type="text" name="leverage" value="" data-options="1,3,25,100,1000"  class="leverage" />
+      </p>
+    </div>
+  </main>
+  <footer>
+
+  </footer>
 </body>
 </html>
