--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pips</title>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.12.1.min.js"></script>
   <script src="./script.js"></script>
 </head>
 <body>
@@ -25,7 +25,7 @@
       </p>
       <p>
         レバレッジ
-        <input type="text" name="leverage" value="" data-options="1,3,25,100,1000"  class="leverage" />
+        <input type="text" name="leverage" value="" id="leverage" />
       </p>
     </div>
   </main>
